<resources>
    <string name="app_name">Inventory</string>
    <string name="action_delete">Delete all</string>
    <string name="empty_view_title_text">Get started by adding a product!</string>
    <string name="action_save">Save</string>
    <string name="editor_activity_title">Add a Product</string>
    <string name="category_overview">Overview</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_image">Image</string>
    <string name="hint_pro_name">Name</string>
    <string name="hint_pro_type">Type</string>
    <string name="hint_pro_supplier">Supplier</string>
    <string name="hint_pro_price">Price</string>
    <string name="hint_pro_quantity">Quantity</string>
    <string name="units">Rs</string>
    <string name="editor_insert_successful">Product saved</string>
    <string name="editor_insert_failed">Error with saving product</string>
    <string name="update_successful">Product updated</string>
    <string name="update_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_successful">Product deleted</string>
    <string name="delete_failed">Error with deleting productt</string>
    <string name="delete_msg">Delete all products?</string>
    <string name="delete_pro_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="sell">Sell</string>
    <string name="title_detail">Product Details</string>
    <string name="no_items">No items to sell</string>
    <string name="product">Product:</string>
    <string name="type">Type:</string>
    <string name="supplier">Supplier:</string>
    <string name="price">Price:</string>
    <string name="order">Order</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
</resources>
